# TODO: Makefile.classic uses GNU make features.
# For portability it would be better to integrate Makefile.classic here and only use automake features.

NMZ_TEST_TARGETS = all
if NMZ_INTEGRATE
NMZ_TEST_TARGETS += testInt
endif
if ENFNORMALIZ
NMZ_TEST_TARGETS += testnf testnfH testdegQ
endif

check-local:
	-rm -rf run_tests
	mkdir run_tests
	(cd $(srcdir) && tar cf - $(NMZTESTS)) | (cd run_tests && tar xf -)
	(cd run_tests && $(MAKE) -f $(abs_srcdir)/Makefile.classic $(NMZ_TEST_TARGETS) NORMALIZ=$(abs_top_builddir)/source/normaliz)

clean-local:
	$(MAKE) -f $(srcdir)/Makefile.classic clean
	-rm -rf run_tests

distclean-local:
	$(MAKE) -f $(srcdir)/Makefile.classic distclean
	-rm -rf run_tests

EXTRA_DIST = Makefile.classic sortdiff		\
	tools/my-out-ref.sh			\
	tools/mygetin-1.sh			\
	tools/mygetin.sh

NMZTESTS = test-/23.in					\
	test-/23.ref					\
	test-/3x3_sign.in				\
	test-/3x3_sign.ref				\
	test-/3x3_sign2.in				\
	test-/3x3_sign2.ref				\
	test-/3x3magiceven.in				\
	test-/3x3magiceven.ref				\
	test-/3x3magicNGD.in				\
	test-/3x3magicNGD.ref				\
	test-/4x4.in					\
	test-/4x4.ref					\
	test-/4x4gen.in					\
	test-/4x4gen.ref				\
	test-/binom.in					\
	test-/binom.ref					\
	test-/ChF_8_1024P.in				\
	test-/ChF_8_1024P.ref				\
	test-/ChF_8_1024.in				\
	test-/ChF_8_1024.ref				\
	test-/ChF_8_1024Nr.in				\
	test-/ChF_8_1024Nr.ref				\
	test-/ChineseRemainder.in			\
	test-/ChineseRemainder.ref			\
	test-/CondParSymmSemi.in			\
	test-/CondParSymmSemi.ref			\
	test-/cross2.in					\
	test-/cross2.ref				\
	test-/crash.in					\
	test-/crash.ref					\
	test-/crash2.in					\
	test-/crash2.ref				\
	test-/cube-8.in					\
	test-/cube-8.ref				\
	test-/cube-8-inhom.in				\
	test-/cube-8-inhom.ref				\
	test-/cube-10.in				\
	test-/cube-10.ref				\
	test-/cube-10codim.in				\
	test-/cube-10codim.ref				\
	test-/cut.in					\
	test-/cut.ref					\
	test-/dehomogenization.in			\
	test-/dehomogenization.ref			\
	test-/diagonal.in				\
	test-/diagonal.ref				\
	test-/direct_overflow.in			\
	test-/direct_overflow.ref			\
	test-/direct_overflow_dual.in			\
	test-/direct_overflow_dual.ref			\
	test-/dual.in					\
	test-/dual.ref					\
	test-/dual_not_full_dim.in			\
	test-/dual_not_full_dim.ref			\
	test-/dupl_remove.in				\
	test-/dupl_remove.ref				\
	test-/empty_polyhedron.in			\
	test-/empty_polyhedron.ref			\
	test-/empty_polyhedron2.in			\
	test-/empty_polyhedron2.ref			\
	test-/euclid.in					\
	test-/euclid.ref				\
	test-/Fact_wrt_dual_error.in			\
	test-/Fact_wrt_dual_error.ref			\
	test-/Frol_high_6_1024Null5_6.in		\
	test-/Frol_high_6_1024Null5_6.ref		\
	test-/fullspace.in				\
	test-/fullspace.ref				\
	test-/fullspacehyp.in				\
	test-/fullspacehyp.ref				\
	test-/gen_inhom_nonpointed.in			\
	test-/gen_inhom_nonpointed.ref			\
	test-/gen_nonpointed.in				\
	test-/gen_nonpointed.ref			\
	test-/halfspace2.in				\
	test-/halfspace2.ref				\
	test-/halfspace3inhom.in			\
	test-/halfspace3inhom.ref			\
	test-/hickerson-16.in				\
	test-/hickerson-16.ref				\
	test-/hbrc_3.in					\
	test-/hbrc_3.ref				\
	test-/hickerson-16plus1.in			\
	test-/hickerson-16plus1.ref			\
	test-/InhomCong.in				\
	test-/InhomCong.ref				\
	test-/InhomIneqSymb.in				\
	test-/InhomIneqSymb.ref				\
	test-/inhom_eq.in				\
	test-/inhom_eq.ref				\
	test-/inhom_quasi.in				\
	test-/inhom_quasi.ref				\
	test-/inhom_triangle.in				\
	test-/inhom_triangle.ref			\
	test-/intcl1.in					\
	test-/intcl1.ref				\
	test-/knapsack_11_60_test2.in			\
	test-/knapsack_11_60_test2.ref			\
	test-/latt_id_nonpointed.in			\
	test-/latt_id_nonpointed.ref			\
	test-/lattice_ideal.in				\
	test-/lattice_ideal.ref				\
	test-/lowrank.in				\
	test-/lowrank.ref				\
	test-/lowrankPF.in				\
	test-/lowrankPF.ref				\
	test-/m10.in					\
	test-/m10.ref					\
	test-/medium.in					\
	test-/medium.ref				\
	test-/mode456.in				\
	test-/mode456.ref				\
	test-/mode456_constraints.in			\
	test-/mode456_constraints.ref			\
	test-/NonCMDiv.in				\
	test-/NonCMDiv.ref				\
	test-/NrTest.in					\
	test-/NrTest.ref				\
	test-/normface.in				\
	test-/normface.ref				\
	test-/n_6_feas.in				\
	test-/n_6_feas.ref				\
	test-/n_6_infeas.in				\
	test-/n_6_infeas.ref				\
	test-/notpointed.in				\
	test-/notpointed.ref				\
	test-/NumSemi.in				\
	test-/NumSemi.ref				\
	test-/polyhedron.in				\
	test-/polyhedron.ref				\
	test-/parallel_24.in				\
	test-/parallel_24.ref				\
	test-/polytop.in				\
	test-/polytop.ref				\
	test-/rafa1409.in				\
	test-/rafa1409.ref				\
	test-/rafa2310.in				\
	test-/rafa2310.ref				\
	test-/rafa2416.in				\
	test-/rafa2416.ref				\
	test-/rational_inhom.in				\
	test-/rational_inhom.ref			\
	test-/rational_inhom_H.in			\
	test-/rational_inhom_H.ref			\
	test-/rational_inhom_HE.in			\
	test-/rational_inhom_HE.ref			\
	test-/rational_inhom_full.in			\
	test-/rational_inhom_full.ref			\
	test-/rational_inhom_hedron.in			\
	test-/rational_inhom_hedron.ref			\
	test-/rees.in					\
	test-/rees.ref					\
	test-/rees_grading.in				\
	test-/rees_grading.ref				\
	test-/rees_mini.in				\
	test-/rees_mini.ref				\
	test-/rees_prim.in				\
	test-/rees_prim.ref				\
	test-/rp2poly.in				\
	test-/rp2poly.ref				\
	test-/rproj2.in					\
	test-/rproj2.ref				\
	test-/simple_grading.in				\
	test-/simple_grading.ref			\
	test-/simple_grading2.in			\
	test-/simple_grading2.ref			\
	test-/small-sh.in				\
	test-/small-sh.ref				\
	test-/small.in					\
	test-/small.ref					\
	test-/smallPF.in				\
	test-/smallPF.ref				\
	test-/squaref0.in				\
	test-/squaref0.ref				\
	test-/squaref1.in				\
	test-/squaref1.ref				\
	test-/SquareMinusVertexPolyh.in			\
	test-/SquareMinusVertexPolyh.ref		\
	test-/strict.in					\
	test-/strict.ref				\
	test-/strip2.in					\
	test-/strip2.ref				\
	test-/subspace4.in				\
	test-/subspace4.ref				\
	test-/subspace4_inhom.in			\
	test-/subspace4_inhom.ref			\
	test-/test22dual.in				\
	test-/test22dual.ref				\
	test-/Thierry.in				\
	test-/Thierry.ref				\
	test-/ThierryApproximate.in			\
	test-/ThierryApproximate.ref			\
	test-/ThierryNoProjection.in			\
	test-/ThierryNoProjection.ref			\
	test-/ThierryPF.in				\
	test-/ThierryPF.ref				\
	test-/zero3.in					\
	test-/zero3.ref					\
	test-/zero4.in					\
	test-/zero4.ref					\
	test-/zero_polyhedron.in			\
	test-/zero_polyhedron.ref			\
	test-1/3x3magic.in				\
	test-1/3x3magic.ref				\
	test-1/cross2.in				\
	test-1/cross2.ref				\
	test-1/cut.in					\
	test-1/cut.ref					\
	test-1/direct_overflow.in			\
	test-1/direct_overflow.ref			\
	test-1/dual.in					\
	test-1/dual.ref					\
	test-1/dual_not_full_dim.in			\
	test-1/dual_not_full_dim.ref			\
	test-1/dupl_remove.in				\
	test-1/dupl_remove.ref				\
	test-1/Fact_wrt_dual_error_hom.in		\
	test-1/Fact_wrt_dual_error_hom.ref		\
	test-1/fullspace.in				\
	test-1/fullspace.ref				\
	test-1/fullspacehyp.in				\
	test-1/fullspacehyp.ref				\
	test-1/gen_nonpointed.in			\
	test-1/gen_nonpointed.ref			\
	test-1/halfspace2.in				\
	test-1/halfspace2.ref				\
	test-1/hickerson-16.in				\
	test-1/hickerson-16.ref				\
	test-1/latt_id_nonpointed.in			\
	test-1/latt_id_nonpointed.ref			\
	test-1/lattice_ideal.in				\
	test-1/lattice_ideal.ref			\
	test-1/lowrank.in				\
	test-1/lowrank.ref				\
	test-1/medium.in				\
	test-1/medium.ref				\
	test-1/mode45.in				\
	test-1/mode45.ref				\
	test-1/mode456.in				\
	test-1/mode456.ref				\
	test-1/notpointed.in				\
	test-1/notpointed.ref				\
	test-1/polytop.in				\
	test-1/polytop.ref				\
	test-1/rafa2416.in				\
	test-1/rafa2416.ref				\
	test-1/rees.in					\
	test-1/rees.ref					\
	test-1/rees_mini.in				\
	test-1/rees_mini.ref				\
	test-1/rp2poly.in				\
	test-1/rp2poly.ref				\
	test-1/rproj2.in				\
	test-1/rproj2.ref				\
	test-1/small.in					\
	test-1/small.ref				\
	test-1/squaref0.in				\
	test-1/squaref0.ref				\
	test-1/squaref1.in				\
	test-1/squaref1.ref				\
	test-1/zero4.in					\
	test-1/zero4.ref				\
	test-d/3x3magic.in				\
	test-d/3x3magic.ref				\
	test-d/4x4.in					\
	test-d/4x4.ref					\
	test-d/5x5.in					\
	test-d/5x5.ref					\
	test-d/ChineseRemainder.in			\
	test-d/ChineseRemainder.ref			\
	test-d/cross2.in				\
	test-d/cross2.ref				\
	test-d/direct_overflow.in			\
	test-d/direct_overflow.ref			\
	test-d/dual-inhom-not-pointed.in		\
	test-d/dual-inhom-not-pointed.ref		\
	test-d/dual_index.in				\
	test-d/dual_index.ref				\
	test-d/dual_not_full_dim.in			\
	test-d/dual_not_full_dim.ref			\
	test-d/dupl_remove.in				\
	test-d/dupl_remove.ref				\
	test-d/election1dual.in				\
	test-d/election1dual.ref			\
	test-d/empty_polyhedron.in			\
	test-d/empty_polyhedron.ref			\
	test-d/Fact_wrt_dual_error.in			\
	test-d/Fact_wrt_dual_error.ref			\
	test-d/fullspace.in				\
	test-d/fullspace.ref				\
	test-d/fullspacehyp.in				\
	test-d/fullspacehyp.ref				\
	test-d/gen_inhom_nonpointed.in			\
	test-d/gen_inhom_nonpointed.ref			\
	test-d/gen_nonpointed.in			\
	test-d/gen_nonpointed.ref			\
	test-d/halfspace2.in				\
	test-d/halfspace2.ref				\
	test-d/halfspace3inhom.in			\
	test-d/halfspace3inhom.ref			\
	test-d/hyperplanes-not-pointed.in		\
	test-d/hyperplanes-not-pointed.ref		\
	test-d/inhom_eq.in				\
	test-d/inhom_eq.ref				\
	test-d/latt_id_nonpointed.in			\
	test-d/latt_id_nonpointed.ref			\
	test-d/mode45.in				\
	test-d/mode45.ref				\
	test-d/mode456.in				\
	test-d/mode456.ref				\
	test-d/n_6_feas.in				\
	test-d/n_6_feas.ref				\
	test-d/n_6_infeas.in				\
	test-d/n_6_infeas.ref				\
	test-d/normface.in				\
	test-d/normface.ref				\
	test-d/rees_mini.in				\
	test-d/rees_mini.ref				\
	test-d/strip2.in				\
	test-d/strip2.ref				\
	test-d/zero4.in					\
	test-d/zero4.ref				\
	test-d1/3x3magic.in				\
	test-d1/3x3magic.ref				\
	test-d1/4x4.in					\
	test-d1/4x4.ref					\
	test-d1/5x5.in					\
	test-d1/5x5.ref					\
	test-d1/cross2.in				\
	test-d1/cross2.ref				\
	test-d1/direct_overflow.in			\
	test-d1/direct_overflow.ref			\
	test-d1/dual_not_full_dim.in			\
	test-d1/dual_not_full_dim.ref			\
	test-d1/dupl_remove.in				\
	test-d1/dupl_remove.ref				\
	test-d1/election1dual.in			\
	test-d1/election1dual.ref			\
	test-d1/Fact_wrt_dual_error_hom.in		\
	test-d1/Fact_wrt_dual_error_hom.ref		\
	test-d1/fullspace.in				\
	test-d1/fullspace.ref				\
	test-d1/fullspacehyp.in				\
	test-d1/fullspacehyp.ref			\
	test-d1/gen_nonpointed.in			\
	test-d1/gen_nonpointed.ref			\
	test-d1/halfspace2.in				\
	test-d1/halfspace2.ref				\
	test-d1/hyperplanes-not-pointed.in		\
	test-d1/hyperplanes-not-pointed.ref		\
	test-d1/latt_id_nonpointed.in			\
	test-d1/latt_id_nonpointed.ref			\
	test-d1/mode45.in				\
	test-d1/mode45.ref				\
	test-d1/mode456.in				\
	test-d1/mode456.ref				\
	test-d1/rees_mini.in				\
	test-d1/rees_mini.ref				\
	test-d1/zero4.in				\
	test-d1/zero4.ref				\
	test-dnn/3x3magic.in				\
	test-dnn/3x3magic.ref				\
	test-dnn/4x4.in					\
	test-dnn/4x4.ref				\
	test-dnn/5x5.in					\
	test-dnn/5x5.ref				\
	test-dnn/ChineseRemainder.in			\
	test-dnn/ChineseRemainder.ref			\
	test-dnn/cross2.in				\
	test-dnn/cross2.ref				\
	test-dnn/direct_overflow.in			\
	test-dnn/direct_overflow.ref			\
	test-dnn/dual-inhom-not-pointed.in		\
	test-dnn/dual-inhom-not-pointed.ref		\
	test-dnn/dual_index.in				\
	test-dnn/dual_index.ref				\
	test-dnn/dual_not_full_dim.in			\
	test-dnn/dual_not_full_dim.ref			\
	test-dnn/dupl_remove.in				\
	test-dnn/dupl_remove.ref			\
	test-dnn/election1dual.in			\
	test-dnn/election1dual.ref			\
	test-dnn/empty_polyhedron.in			\
	test-dnn/empty_polyhedron.ref			\
	test-dnn/Fact_wrt_dual_error.in			\
	test-dnn/Fact_wrt_dual_error.ref		\
	test-dnn/fullspace.in				\
	test-dnn/fullspace.ref				\
	test-dnn/fullspacehyp.in			\
	test-dnn/fullspacehyp.ref			\
	test-dnn/gen_inhom_nonpointed.in		\
	test-dnn/gen_inhom_nonpointed.ref		\
	test-dnn/gen_nonpointed.in			\
	test-dnn/gen_nonpointed.ref			\
	test-dnn/halfspace2.in				\
	test-dnn/halfspace2.ref				\
	test-dnn/halfspace3inhom.in			\
	test-dnn/halfspace3inhom.ref			\
	test-dnn/hyperplanes-not-pointed.in		\
	test-dnn/hyperplanes-not-pointed.ref		\
	test-dnn/inhom_eq.in				\
	test-dnn/inhom_eq.ref				\
	test-dnn/latt_id_nonpointed.in			\
	test-dnn/latt_id_nonpointed.ref			\
	test-dnn/mode45.in				\
	test-dnn/mode45.ref				\
	test-dnn/mode456.in				\
	test-dnn/mode456.ref				\
	test-dnn/rees_mini.in				\
	test-dnn/rees_mini.ref				\
	test-dnn/strip2.in				\
	test-dnn/strip2.ref				\
	test-dnn/zero4.in				\
	test-dnn/zero4.ref				\
	test-h/3x3_sign.in				\
	test-h/3x3_sign.ref				\
	test-h/3x3_sign2.in				\
	test-h/3x3_sign2.ref				\
	test-h/3x3magiceven.in				\
	test-h/3x3magiceven.ref				\
	test-h/4x4.in					\
	test-h/4x4.ref					\
	test-h/4x4gen.in				\
	test-h/4x4gen.ref				\
	test-h/binom.in					\
	test-h/binom.ref				\
	test-h/cross2.in				\
	test-h/cross2.ref				\
	test-h/cut.in					\
	test-h/cut.ref					\
	test-h/direct_overflow.in			\
	test-h/direct_overflow.ref			\
	test-h/dual.in					\
	test-h/dual.ref					\
	test-h/dual_not_full_dim.in			\
	test-h/dual_not_full_dim.ref			\
	test-h/dupl_remove.in				\
	test-h/dupl_remove.ref				\
	test-h/gen_nonpointed.in			\
	test-h/gen_nonpointed.ref			\
	test-h/halfspace2.in				\
	test-h/halfspace2.ref				\
	test-h/halfspace3inhom.in			\
	test-h/halfspace3inhom.ref			\
	test-h/hickerson-16.in				\
	test-h/hickerson-16.ref				\
	test-h/inhom_triangle.in			\
	test-h/inhom_triangle.ref			\
	test-h/latt_id_nonpointed.in			\
	test-h/latt_id_nonpointed.ref			\
	test-h/lattice_ideal.in				\
	test-h/lattice_ideal.ref			\
	test-h/lowrank.in				\
	test-h/lowrank.ref				\
	test-h/medium.in				\
	test-h/medium.ref				\
	test-h/mode456.in				\
	test-h/mode456.ref				\
	test-h/NonCMDiv.in				\
	test-h/NonCMDiv.ref				\
	test-h/normface.in				\
	test-h/normface.ref				\
	test-h/notpointed.in				\
	test-h/notpointed.ref				\
	test-h/polytop.in				\
	test-h/polytop.ref				\
	test-h/rafa2416.in				\
	test-h/rafa2416.ref				\
	test-h/rees.in					\
	test-h/rees.ref					\
	test-h/rees_grading.in				\
	test-h/rees_grading.ref				\
	test-h/rees_mini.in				\
	test-h/rees_mini.ref				\
	test-h/rp2poly.in				\
	test-h/rp2poly.ref				\
	test-h/rproj2.in				\
	test-h/rproj2.ref				\
	test-h/simple_grading.in			\
	test-h/simple_grading.ref			\
	test-h/simple_grading2.in			\
	test-h/simple_grading2.ref			\
	test-h/small.in					\
	test-h/small.ref				\
	test-h/squaref0.in				\
	test-h/squaref0.ref				\
	test-h/squaref1.in				\
	test-h/squaref1.ref				\
	test-h/strip2.in				\
	test-h/strip2.ref				\
	test-h/test22dual.in				\
	test-h/test22dual.ref				\
	test-h/zero4.in					\
	test-h/zero4.ref				\
	test-hh/diagonal_5.in				\
	test-hh/diagonal_5.IntHull.ref			\
	test-hh/diagonal_5.ref				\
	test-hh/direct_overflow.in			\
	test-hh/direct_overflow.IntHull.ref		\
	test-hh/direct_overflow.ref			\
	test-hh/fullspace.in				\
	test-hh/fullspace.IntHull.ref			\
	test-hh/fullspace.ref				\
	test-hh/fullspacehyp.in				\
	test-hh/fullspacehyp.IntHull.ref		\
	test-hh/fullspacehyp.ref			\
	test-hh/halfspace3inhom.in			\
	test-hh/halfspace3inhom.IntHull.ref		\
	test-hh/halfspace3inhom.ref			\
	test-hh/InhomIneq.in				\
	test-hh/InhomIneq.IntHull.ref			\
	test-hh/InhomIneq.ref				\
	test-hh/no_int_point.in				\
	test-hh/no_int_point.IntHull.ref		\
	test-hh/no_int_point.ref			\
	test-hh/rational.in				\
	test-hh/rational.IntHull.ref			\
	test-hh/rational.ref				\
	test-hh/strip2.in				\
	test-hh/strip2.IntHull.ref			\
	test-hh/strip2.ref				\
	test-mm/4x4gen.in				\
	test-mm/4x4gen.ref				\
	test-mm/binom.in				\
	test-mm/binom.ref				\
	test-mm/cross2.in				\
	test-mm/cross2.ref				\
	test-mm/direct_overflow.in			\
	test-mm/direct_overflow.ref			\
	test-mm/dupl_remove.in				\
	test-mm/dupl_remove.ref				\
	test-mm/fullspace.in				\
	test-mm/fullspace.ref				\
	test-mm/fullspacehyp.in				\
	test-mm/fullspacehyp.ref			\
	test-mm/future/inhom_quasi.in			\
	test-mm/future/inhom_quasi.ref			\
	test-mm/future/SquareMinusVertexPolyh.in	\
	test-mm/future/SquareMinusVertexPolyh.ref	\
	test-mm/gen_nonpointed.in			\
	test-mm/gen_nonpointed.ref			\
	test-mm/intcl1.in				\
	test-mm/intcl1.ref				\
	test-mm/knapsack_11_60_test2.in			\
	test-mm/knapsack_11_60_test2.ref		\
	test-mm/lattice_ideal.in			\
	test-mm/lattice_ideal.ref			\
	test-mm/lowrank.in				\
	test-mm/lowrank.ref				\
	test-mm/medium.in				\
	test-mm/medium.ref				\
	test-mm/modgen_inhom2.in			\
	test-mm/modgen_inhom2.ref			\
	test-mm/modgen_inhom3.in			\
	test-mm/modgen_inhom3.ref			\
	test-mm/normface.in				\
	test-mm/normface.ref				\
	test-mm/notpointed.in				\
	test-mm/notpointed.ref				\
	test-mm/no_open_facet.in			\
	test-mm/no_open_facet.ref			\
	test-mm/open_facet.in				\
	test-mm/open_facet.ref				\
	test-mm/polytop.in				\
	test-mm/polytop.ref				\
	test-mm/rafa1409.in				\
	test-mm/rafa1409.ref				\
	test-mm/rafa2310.in				\
	test-mm/rafa2310.ref				\
	test-mm/rafa2416.in				\
	test-mm/rafa2416.ref				\
	test-mm/rees.in					\
	test-mm/rees.ref				\
	test-mm/rees_grading.in				\
	test-mm/rees_grading.ref			\
	test-mm/rees_mini.in				\
	test-mm/rees_mini.ref				\
	test-mm/rees_prim.in				\
	test-mm/rees_prim.ref				\
	test-mm/rp2poly.in				\
	test-mm/rp2poly.ref				\
	test-mm/rproj2.in				\
	test-mm/rproj2.ref				\
	test-mm/simple_grading.in			\
	test-mm/simple_grading.ref			\
	test-mm/simple_grading2.in			\
	test-mm/simple_grading2.ref			\
	test-mm/squaref0.in				\
	test-mm/squaref0.ref				\
	test-mm/squaref1.in				\
	test-mm/squaref1.ref				\
	test-mm/test22dual.in				\
	test-mm/test22dual.ref				\
	test-mm/zero_polyhedron.in			\
	test-mm/zero_polyhedron.ref			\
	test-n/cross2.in				\
	test-n/cross2.ref				\
	test-n/direct_overflow.in			\
	test-n/direct_overflow.ref			\
	test-n/dupl_remove.in				\
	test-n/dupl_remove.ref				\
	test-n/gen_nonpointed.in			\
	test-n/gen_nonpointed.ref			\
	test-n/halfspace2.in				\
	test-n/halfspace2.ref				\
	test-n/halfspace3inhom.in			\
	test-n/halfspace3inhom.ref			\
	test-n/hickerson-16.in				\
	test-n/hickerson-16.ref				\
	test-n/inhom_quasi.in				\
	test-n/inhom_quasi.ref				\
	test-n/inhom_triangle.in			\
	test-n/inhom_triangle.ref			\
	test-n/knapsack_11_60_test2.in			\
	test-n/knapsack_11_60_test2.ref			\
	test-n/latt_id_nonpointed.in			\
	test-n/latt_id_nonpointed.ref			\
	test-n/lattice_ideal.in				\
	test-n/lattice_ideal.ref			\
	test-n/normface.in				\
	test-n/normface.ref				\
	test-n/rees_mini.in				\
	test-n/rees_mini.ref				\
	test-n/strip2.in				\
	test-n/strip2.ref				\
	test-nn/2equation_large_simplex.in		\
	test-nn/2equation_large_simplex.ref		\
	test-nn/binom.in				\
	test-nn/binom.ref				\
	test-nn/ChineseRemainder.in			\
	test-nn/ChineseRemainder.ref			\
	test-nn/cross2.in				\
	test-nn/cross2.ref				\
	test-nn/cut.in					\
	test-nn/cut.ref					\
	test-nn/direct_overflow.in			\
	test-nn/direct_overflow.ref			\
	test-nn/dual.in					\
	test-nn/dual.ref				\
	test-nn/dual_not_full_dim.in			\
	test-nn/dual_not_full_dim.ref			\
	test-nn/dupl_remove.in				\
	test-nn/dupl_remove.ref				\
	test-nn/Fact_wrt_dual_error.in			\
	test-nn/Fact_wrt_dual_error.ref			\
	test-nn/fullspace.in				\
	test-nn/fullspace.ref				\
	test-nn/fullspacehyp.in				\
	test-nn/fullspacehyp.ref			\
	test-nn/gen_inhom_nonpointed.in			\
	test-nn/gen_inhom_nonpointed.ref		\
	test-nn/gen_nonpointed.in			\
	test-nn/gen_nonpointed.ref			\
	test-nn/halfspace2.in				\
	test-nn/halfspace2.ref				\
	test-nn/halfspace3inhom.in			\
	test-nn/halfspace3inhom.ref			\
	test-nn/hickerson-16.in				\
	test-nn/hickerson-16.ref			\
	test-nn/hyperplanes-not-pointed.in		\
	test-nn/hyperplanes-not-pointed.ref		\
	test-nn/icmi.in					\
	test-nn/icmi.ref				\
	test-nn/icml.in					\
	test-nn/icml.ref				\
	test-nn/inhom_quasi.in				\
	test-nn/inhom_quasi.ref				\
	test-nn/latt_id_nonpointed.in			\
	test-nn/latt_id_nonpointed.ref			\
	test-nn/lattice_ideal.in			\
	test-nn/lattice_ideal.ref			\
	test-nn/lowrank.in				\
	test-nn/lowrank.ref				\
	test-nn/medium.in				\
	test-nn/medium.ref				\
	test-nn/mode45.in				\
	test-nn/mode45.ref				\
	test-nn/mode456.in				\
	test-nn/mode456.ref				\
	test-nn/NonCMDiv.in				\
	test-nn/NonCMDiv.ref				\
	test-nn/normface.in				\
	test-nn/normface.ref				\
	test-nn/notpointed.in				\
	test-nn/notpointed.ref				\
	test-nn/polytop.in				\
	test-nn/polytop.ref				\
	test-nn/rafa1409.in				\
	test-nn/rafa1409.ref				\
	test-nn/rafa2310.in				\
	test-nn/rafa2310.ref				\
	test-nn/rafa2416.in				\
	test-nn/rafa2416.ref				\
	test-nn/rees.in					\
	test-nn/rees.ref				\
	test-nn/rees_mini.in				\
	test-nn/rees_mini.ref				\
	test-nn/rees_prim.in				\
	test-nn/rees_prim.ref				\
	test-nn/rp2poly.in				\
	test-nn/rp2poly.ref				\
	test-nn/rproj2.in				\
	test-nn/rproj2.ref				\
	test-nn/small-sh.in				\
	test-nn/small-sh.ref				\
	test-nn/small.in				\
	test-nn/small.ref				\
	test-nn/smallerror.in				\
	test-nn/smallerror.ref				\
	test-nn/squaref0.in				\
	test-nn/squaref0.ref				\
	test-nn/squaref1.in				\
	test-nn/squaref1.ref				\
	test-nn/strip2.in				\
	test-nn/strip2.ref				\
	test-nn/subspace4.in				\
	test-nn/subspace4.ref				\
	test-nn/subspace4_inhom.in			\
	test-nn/subspace4_inhom.ref			\
	test-nn/zero4.in				\
	test-nn/zero4.ref				\
	test-p/binom.in					\
	test-p/binom.ref				\
	test-p/bugHpoly.in				\
	test-p/bugHpoly.ref				\
	test-p/cross2.in				\
	test-p/cross2.ref				\
	test-p/cut.in					\
	test-p/cut.ref					\
	test-p/direct_overflow.in			\
	test-p/direct_overflow.ref			\
	test-p/dual.in					\
	test-p/dual.ref					\
	test-p/dual_not_full_dim.in			\
	test-p/dual_not_full_dim.ref			\
	test-p/gen_nonpointed.in			\
	test-p/gen_nonpointed.ref			\
	test-p/halfspace2.in				\
	test-p/halfspace2.ref				\
	test-p/hickerson-16.in				\
	test-p/hickerson-16.ref				\
	test-p/knapsack_11_60_test2.in			\
	test-p/knapsack_11_60_test2.ref			\
	test-p/latt_id_nonpointed.in			\
	test-p/latt_id_nonpointed.ref			\
	test-p/lattice_ideal.in				\
	test-p/lattice_ideal.ref			\
	test-p/lowrank.in				\
	test-p/lowrank.ref				\
	test-p/medium.in				\
	test-p/medium.ref				\
	test-p/notpointed.in				\
	test-p/notpointed.ref				\
	test-p/polytop.in				\
	test-p/polytop.ref				\
	test-p/rafa2416.in				\
	test-p/rafa2416.ref				\
	test-p/rees.in					\
	test-p/rees.ref					\
	test-p/rees_mini.in				\
	test-p/rees_mini.ref				\
	test-p/rp2poly.in				\
	test-p/rp2poly.ref				\
	test-p/rproj2.in				\
	test-p/rproj2.ref				\
	test-p/small.in					\
	test-p/small.ref				\
	test-p/squaref0.in				\
	test-p/squaref0.ref				\
	test-p/squaref1.in				\
	test-p/squaref1.ref				\
	test-p/zero4.in					\
	test-p/zero4.ref				\
	test-q/bugHpoly.in				\
	test-q/bugHpoly.ref				\
	test-q/cross2.in				\
	test-q/cross2.ref				\
	test-q/cut.in					\
	test-q/cut.ref					\
	test-q/direct_overflow.in			\
	test-q/direct_overflow.ref			\
	test-q/dual.in					\
	test-q/dual.ref					\
	test-q/dual_not_full_dim.in			\
	test-q/dual_not_full_dim.ref			\
	test-q/fullspace.in				\
	test-q/fullspace.ref				\
	test-q/fullspacehyp.in				\
	test-q/fullspacehyp.ref				\
	test-q/gen_nonpointed.in			\
	test-q/gen_nonpointed.ref			\
	test-q/halfspace2.in				\
	test-q/halfspace2.ref				\
	test-q/halfspace3inhom.in			\
	test-q/halfspace3inhom.ref			\
	test-q/hickerson-16.in				\
	test-q/hickerson-16.ref				\
	test-q/inhom_quasi.in				\
	test-q/inhom_quasi.ref				\
	test-q/inhom_triangle.in			\
	test-q/inhom_triangle.ref			\
	test-Scip/knapsack_11_60.in			\
	test-Scip/knapsack_11_60.ref			\
	test-q/knapsack_11_60_test2.in			\
	test-q/knapsack_11_60_test2.ref			\
	test-q/latt_id_nonpointed.in			\
	test-q/latt_id_nonpointed.ref			\
	test-q/lattice_ideal.in				\
	test-q/lattice_ideal.ref			\
	test-q/lowrank.in				\
	test-q/lowrank.ref				\
	test-q/medium.in				\
	test-q/medium.ref				\
	test-q/NonCMDiv.in				\
	test-q/NonCMDiv.ref				\
	test-q/notpointed.in				\
	test-q/notpointed.ref				\
	test-q/poly_hom_const.in			\
	test-q/poly_hom_const.ref			\
	test-q/polytop.in				\
	test-q/polytop.ref				\
	test-q/rafa2416.in				\
	test-q/rafa2416.ref				\
	test-q/rees.in					\
	test-q/rees.ref					\
	test-q/rees_mini.in				\
	test-q/rees_mini.ref				\
	test-q/rp2poly.in				\
	test-q/rp2poly.ref				\
	test-q/rproj2.in				\
	test-q/rproj2.ref				\
	test-q/small.in					\
	test-q/small.ref				\
	test-q/squaref0.in				\
	test-q/squaref0.ref				\
	test-q/squaref1.in				\
	test-q/squaref1.ref				\
	test-q/strip2.in				\
	test-q/strip2.ref				\
	test-q/subspace4.in				\
	test-q/subspace4.ref				\
	test-q/zero4.in					\
	test-q/zero4.ref				\
	test-r1/3x3magic.in				\
	test-r1/3x3magic.ref				\
	test-r1/4x4.in					\
	test-r1/4x4.ref					\
	test-r1/cross2.in				\
	test-r1/cross2.ref				\
	test-r1/cut.in					\
	test-r1/cut.ref					\
	test-r1/direct_overflow.in			\
	test-r1/direct_overflow.ref			\
	test-r1/dual.in					\
	test-r1/dual.ref				\
	test-r1/dual_not_full_dim.in			\
	test-r1/dual_not_full_dim.ref			\
	test-r1/dupl_remove.in				\
	test-r1/dupl_remove.ref				\
	test-r1/gen_nonpointed.in			\
	test-r1/gen_nonpointed.ref			\
	test-r1/halfspace2.in				\
	test-r1/halfspace2.ref				\
	test-r1/hickerson-16.in				\
	test-r1/hickerson-16.ref			\
	test-r1/hyperplanes-not-pointed.in		\
	test-r1/hyperplanes-not-pointed.ref		\
	test-r1/latt_id_nonpointed.in			\
	test-r1/latt_id_nonpointed.ref			\
	test-r1/lowrank.in				\
	test-r1/lowrank.ref				\
	test-r1/medium.in				\
	test-r1/medium.ref				\
	test-r1/mode45.in				\
	test-r1/mode45.ref				\
	test-r1/mode456.in				\
	test-r1/mode456.ref				\
	test-r1/notpointed.in				\
	test-r1/notpointed.ref				\
	test-r1/polytop.in				\
	test-r1/polytop.ref				\
	test-r1/rafa2416.in				\
	test-r1/rafa2416.ref				\
	test-r1/rees.in					\
	test-r1/rees.ref				\
	test-r1/rees_mini.in				\
	test-r1/rees_mini.ref				\
	test-r1/rp2poly.in				\
	test-r1/rp2poly.ref				\
	test-r1/rproj2.in				\
	test-r1/rproj2.ref				\
	test-r1/small.in				\
	test-r1/small.ref				\
	test-r1/squaref0.in				\
	test-r1/squaref0.ref				\
	test-r1/squaref1.in				\
	test-r1/squaref1.ref				\
	test-r1/zero4.in				\
	test-r1/zero4.ref				\
	test-s/23.in					\
	test-s/23.ref					\
	test-s/3x3_sign.in				\
	test-s/3x3_sign.ref				\
	test-s/3x3magiceven.in				\
	test-s/3x3magiceven.ref				\
	test-s/binom.in					\
	test-s/binom.ref				\
	test-s/ChineseRemainder.in			\
	test-s/ChineseRemainder.ref			\
	test-s/cross2.in				\
	test-s/cross2.ref				\
	test-s/cut.in					\
	test-s/cut.ref					\
	test-s/dehomogenization.in			\
	test-s/dehomogenization.ref			\
	test-s/direct_overflow.in			\
	test-s/direct_overflow.ref			\
	test-s/dual.in					\
	test-s/dual.ref					\
	test-s/dual_not_full_dim.in			\
	test-s/dual_not_full_dim.ref			\
	test-s/dupl_remove.in				\
	test-s/dupl_remove.ref				\
	test-s/fullspace.in				\
	test-s/fullspace.ref				\
	test-s/fullspacehyp.in				\
	test-s/fullspacehyp.ref				\
	test-s/gen_inhom_nonpointed.in			\
	test-s/gen_inhom_nonpointed.ref			\
	test-s/gen_nonpointed.in			\
	test-s/gen_nonpointed.ref			\
	test-s/halfspace2.in				\
	test-s/halfspace2.ref				\
	test-s/halfspace3inhom.in			\
	test-s/halfspace3inhom.ref			\
	test-s/hickerson-16.in				\
	test-s/hickerson-16.ref				\
	test-s/huge.in					\
	test-s/huge.ref					\
	test-s/hyperplanes-not-pointed.in		\
	test-s/hyperplanes-not-pointed.ref		\
	test-s/icmi.in					\
	test-s/icmi.ref					\
	test-s/icml.in					\
	test-s/icml.ref					\
	test-s/latt_id_nonpointed.in			\
	test-s/latt_id_nonpointed.ref			\
	test-s/lattice_ideal.in				\
	test-s/lattice_ideal.ref			\
	test-s/lowrank.in				\
	test-s/lowrank.ref				\
	test-s/medium.in				\
	test-s/mixed_input.ref				\
	test-s/mixed_input.in				\
	test-s/medium.ref				\
	test-s/mode45.in				\
	test-s/mode45.ref				\
	test-s/mode456.in				\
	test-s/mode456.ref				\
	test-s/notpointed.in				\
	test-s/notpointed.ref				\
	test-s/polytop.in				\
	test-s/polytop.ref				\
	test-s/rafa1409.in				\
	test-s/rafa1409.ref				\
	test-s/rafa2310.in				\
	test-s/rafa2310.ref				\
	test-s/rafa2416.in				\
	test-s/rafa2416.ref				\
	test-s/rees.in					\
	test-s/rees.ref					\
	test-s/rees_mini.in				\
	test-s/rees_mini.ref				\
	test-s/rees_prim.in				\
	test-s/rees_prim.ref				\
	test-s/rp2poly.in				\
	test-s/rp2poly.ref				\
	test-s/rproj2.in				\
	test-s/rproj2.ref				\
	test-s/small-sh.in				\
	test-s/small-sh.ref				\
	test-s/small.in					\
	test-s/small.ref				\
	test-s/smallerror.in				\
	test-s/smallerror.ref				\
	test-s/squaref0.in				\
	test-s/squaref0.ref				\
	test-s/squaref1.in				\
	test-s/squaref1.ref				\
	test-s/SquareMinusVertexPolyh.in		\
	test-s/SquareMinusVertexPolyh.ref		\
	test-s/strip2.in				\
	test-s/strip2.ref				\
	test-s/subspace4.in				\
	test-s/subspace4.ref				\
	test-s/subspace4_inhom.in			\
	test-s/subspace4_inhom.ref			\
	test-s/zero4.in					\
	test-s/zero4.ref				\
	test-v/binom.in					\
	test-v/binom.ref				\
	test-v/cross2.in				\
	test-v/cross2.ref				\
	test-v/cut.in					\
	test-v/cut.ref					\
	test-v/direct_overflow.in			\
	test-v/direct_overflow.ref			\
	test-v/dual.in					\
	test-v/dual.ref					\
	test-v/dual_not_full_dim.in			\
	test-v/dual_not_full_dim.ref			\
	test-v/fullspace.in				\
	test-v/fullspace.ref				\
	test-v/fullspacehyp.in				\
	test-v/fullspacehyp.ref				\
	test-v/gen_nonpointed.in			\
	test-v/gen_nonpointed.ref			\
	test-v/halfspace2.in				\
	test-v/halfspace2.ref				\
	test-v/halfspace3inhom.in			\
	test-v/halfspace3inhom.ref			\
	test-v/hickerson-16.in				\
	test-v/hickerson-16.ref				\
	test-v/inhom_triangle.in			\
	test-v/inhom_triangle.ref			\
	test-v/knapsack_11_60_test2.in			\
	test-v/knapsack_11_60_test2.ref			\
	test-v/latt_id_nonpointed.in			\
	test-v/latt_id_nonpointed.ref			\
	test-v/lattice_ideal.in				\
	test-v/lattice_ideal.ref			\
	test-v/lowrank.in				\
	test-v/lowrank.ref				\
	test-v/medium.in				\
	test-v/medium.ref				\
	test-v/mode45.in				\
	test-v/mode45.ref				\
	test-v/notpointed.in				\
	test-v/notpointed.ref				\
	test-v/polytop.in				\
	test-v/polytop.ref				\
	test-v/rafa2416.in				\
	test-v/rafa2416.ref				\
	test-v/rees.in					\
	test-v/rees.ref					\
	test-v/rees_mini.in				\
	test-v/rees_mini.ref				\
	test-v/rp2poly.in				\
	test-v/rp2poly.ref				\
	test-v/rproj2.in				\
	test-v/rproj2.ref				\
	test-v/small.in					\
	test-v/small.ref				\
	test-v/squaref0.in				\
	test-v/squaref0.ref				\
	test-v/squaref1.in				\
	test-v/squaref1.ref				\
	test-v/strip2.in				\
	test-v/strip2.ref				\
	test-v/zero4.in					\
	test-v/zero4.ref				\
	test-w/binom.in					\
	test-w/binom.ref				\
	test-w/direct_overflow.in			\
	test-w/direct_overflow.ref			\
	test-w/dupl_remove.in				\
	test-w/dupl_remove.ref				\
	test-w/gen_nonpointed.in			\
	test-w/gen_nonpointed.ref			\
	test-w/icmi.in					\
	test-w/icmi.ref					\
	test-w/icml.in					\
	test-w/icml.ref					\
	test-w/latt_id_nonpointed.in			\
	test-w/latt_id_nonpointed.ref			\
	test-w/lattice_ideal.in				\
	test-w/lattice_ideal.ref			\
	test-w/lowrank.in				\
	test-w/lowrank.ref				\
	test-w/medium.in				\
	test-w/medium.ref				\
	test-w/notpointed.in				\
	test-w/notpointed.ref				\
	test-w/polytop.in				\
	test-w/polytop.ref				\
	test-w/rafa1409.in				\
	test-w/rafa1409.ref				\
	test-w/rafa2310.in				\
	test-w/rafa2310.ref				\
	test-w/rafa2416.in				\
	test-w/rafa2416.ref				\
	test-w/rees.in					\
	test-w/rees.ref					\
	test-w/rees_mini.in				\
	test-w/rees_mini.ref				\
	test-w/rees_prim.in				\
	test-w/rees_prim.ref				\
	test-w/rp2poly.in				\
	test-w/rp2poly.ref				\
	test-w/rproj2.in				\
	test-w/rproj2.ref				\
	test-w/small.in					\
	test-w/small.ref				\
	test-w/smallerror.in				\
	test-w/smallerror.ref				\
	test-w/squaref0.in				\
	test-w/squaref0.ref				\
	test-w/squaref1.in				\
	test-w/squaref1.ref				\
	test-pr/nonpointed.in				\
	test-pr/nonpointed.ref				\
	test-pr/nonpointed.ProjectCone.ref		\
	test-pr/polyhedron.in				\
	test-pr/polyhedron.ref				\
	test-pr/polyhedron.ProjectCone.ref		\
	test-pr/small_proj.in				\
	test-pr/small_proj.ref				\
	test-pr/small_proj.ProjectCone.ref		\
	test-pr/small_sh_proj.in			\
	test-pr/small_sh_proj.ref			\
	test-pr/small_sh_proj.ProjectCone.ref		\
	test-pr/small_proj_inhom.in			\
	test-pr/small_proj_inhom.ref			\
	test-pr/small_proj_inhom.ProjectCone.ref	\
	test-pr/small_sh_proj_inhom.in			\
	test-pr/small_sh_proj_inhom.ref			\
	test-pr/small_sh_proj_inhom.ProjectCone.ref	\
	test-degenerate/empty0E.in			\
	test-degenerate/empty0E.ref 			\
	test-degenerate/empty0M.in 			\
	test-degenerate/empty0M.ref 			\
	test-degenerate/empty0V.in 			\
	test-degenerate/empty0V.ref 			\
	test-degenerate/empty2lineE.in 			\
	test-degenerate/empty2lineE.ref 		\
	test-degenerate/empty2lineM.in 			\
	test-degenerate/empty2lineM.ref  		\
	test-degenerate/empty2lineV.in  		\
	test-degenerate/empty2lineV.ref 		 \
	test-degenerate/empty2pointE.in  		\
	test-degenerate/empty2pointE.ref  		\
	test-degenerate/empty2pointM.in  		\
	test-degenerate/empty2pointM.ref  		\
	test-degenerate/empty2pointV.in  		\
	test-degenerate/empty2pointV.ref  		\
	test-degenerate/point0E.in  			\
	test-degenerate/point0E.ref  			\
	test-degenerate/point0M.in  			\
	test-degenerate/point0M.ref  			\
	test-degenerate/point0V.in  			\
	test-degenerate/point0V.ref

NMZTESTS +=						\
	test-Int/Condorcet-q.in				\
	test-Int/Condorcet-q.ref			\
	test-Int/Condorcet-v.in				\
	test-Int/Condorcet-v.ref			\
	test-Int/CondorcetSemi-q.in			\
	test-Int/CondorcetSemi-q.ref			\
	test-Int/j462.in				\
	test-Int/j462.ref				\
	test-Int/rational-E.in				\
	test-Int/rational-E.ref				\
	test-Int/rational-I.in				\
	test-Int/rational-I.ref				\
	test-Int/rational-L.in				\
	test-Int/rational-L.ref				\
	test-Int/zero-E.in				\
	test-Int/zero-E.ref				\
	test-Int/zero-I.in				\
	test-Int/zero-I.ref				\
	test-Int/zero-L.in				\
	test-Int/zero-L.ref				\
	test-Special/5x5PF.in				\
	test-Special/5x5PF.ref				\
	test-Scip/hickerson-16.in			\
	test-Scip/hickerson-16.ref			\
	test-Scip/hickerson-16plus1.in			\
	test-Scip/hickerson-16plus1.ref			\
	test-Scip/knapsack_11_60.in			\
	test-Scip/knapsack_11_60.ref

NMZTESTS +=						\
	test-nf/2cone.in 				\
	test-nf/2cone.ref				\
	test-nf/2cone-sqrt2-cone.in 			\
	test-nf/2cone-sqrt2-cone.ref 			\
	test-nf/2cone-sqrt2.in				\
	test-nf/2cone-sqrt2.ref				\
	test-nf/600cell-dual.in				\
	test-nf/600cell-dual.ref			\
	test-nf/600cell.in 				\
	test-nf/600cell.ref 				\
	test-nf/buckyball-v.in				\
	test-nf/buckyball-v.ref 			\
	test-nf/dodecahedron-v.in			\
	test-nf/dodecahedron-v.ref 			\
	test-nf/equations.in				\
	test-nf/equations.ref 				\
	test-nf/formatted.in				\
	test-nf/formatted.ref				\
	test-nf/grandantiprism.in			\
	test-nf/grandantiprism.ref			\
	test-nf/great_rhombicuboctahedron-v.in		\
	test-nf/great_rhombicuboctahedron-v.ref		\
	test-nf/icosahedron-v.in 			\
	test-nf/icosahedron-v.ref 			\
	test-nf/ikosaeder32.in				\
	test-nf/ikosaeder32.ref				\
	test-nf/ikosaeder4.in				\
	test-nf/ikosaeder4.ref				\
	test-nf/ikosaeder.in				\
	test-nf/ikosaeder-perturbed-dual.in 		\
	test-nf/ikosaeder-perturbed-dual.ref 		\
	test-nf/ikosaeder-perturbed.in 			\
	test-nf/ikosaeder-perturbed.ref 		\
	test-nf/ikosaeder.ref				\
	test-nf/low-dim.in				\
	test-nf/low-dim.ref				\
	test-nf/nonpointed.in				\
	test-nf/nonpointed.ref				\
	test-nf/QConstSymb.in				\
	test-nf/QConstSymb.ref 				\
	test-nf/small_rhombicuboctahedron-v.in		\
	test-nf/small_rhombicuboctahedron-v.ref 	\
	test-nf/sparse.in 				\
	test-nf/sparse.ref 				\
	test-nf/sqauare-3rd_root_2.in 			\
	test-nf/sqauare-3rd_root_2.ref 			\
	test-nf/sqauare-cone.in 			\
	test-nf/sqauare-cone.ref			\
	test-nf/truncateddodecahedron.in 		\
	test-nf/truncateddodecahedron.ref 		\
	test-nf-hh/dodecahedron-v.in 			\
	test-nf-hh/dodecahedron-v.IntHull.ref 		\
	test-nf-hh/dodecahedron-v.ref 			\
	test-nf-hh/icosahedron-v.in 			\
	test-nf-hh/icosahedron-v.IntHull.ref 		\
	test-nf-hh/icosahedron-v.ref			\
	test-nf-hh/truncated_dodecahefron_dual.in 	\
	test-nf-hh/truncated_dodecahefron_dual.IntHull.ref \
	test-nf-hh/truncated_dodecahefron_dual.ref 	  \
	test-Qdegenerate/empty0M.in			\
	test-Qdegenerate/empty0M.ref 			\
	test-Qdegenerate/empty2lineM.in 		\
	test-Qdegenerate/empty2lineM.ref 		\
	test-Qdegenerate/empty2pointM.in		\
	test-Qdegenerate/empty2pointM.ref		\
	test-Qdegenerate/point0M.in			\
	test-Qdegenerate/point0M.ref			\
	test-Qdegenerate/point0V.in			\
	test-Qdegenerate/point0V.ref
	
EXTRA_DIST += $(NMZTESTS)
