CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(nmzIntegrate)

INCLUDE_DIRECTORIES(../libnormaliz)
INCLUDE_DIRECTORIES(..)

ADD_EXECUTABLE (nmzIntegrate nmzIntegrate.C)

IF (NMZ_BUILD_STATIC)
  TARGET_LINK_LIBRARIES (nmzIntegrate normaliz-static)
  TARGET_LINK_LIBRARIES (nmzIntegrate ${COCOA_LIBRARY} ${SCIP_LIBRARY})
  TARGET_LINK_LIBRARIES (nmzIntegrate ${GMPXX_STATIC_LIBRARIES} ${GMP_STATIC_LIBRARIES})
  #Static start and end
  SET_TARGET_PROPERTIES(nmzIntegrate PROPERTIES LINK_SEARCH_START_STATIC 1)
  SET_TARGET_PROPERTIES(nmzIntegrate PROPERTIES LINK_SEARCH_END_STATIC 1)
  # Don't try to modify the RPATH
  SET_TARGET_PROPERTIES(nmzIntegrate PROPERTIES INSTALL_RPATH "")
ELSE (NMZ_BUILD_STATIC)
  TARGET_LINK_LIBRARIES (nmzIntegrate normaliz-shared)
  TARGET_LINK_LIBRARIES (nmzIntegrate ${COCOA_LIBRARY} ${SCIP_LIBRARY})
  TARGET_LINK_LIBRARIES (nmzIntegrate ${GMPXX_LIBRARIES} ${GMP_LIBRARIES})
# Don't try to modify the RPATH
  SET_TARGET_PROPERTIES(nmzIntegrate PROPERTIES INSTALL_RPATH "")
ENDIF (NMZ_BUILD_STATIC)

INSTALL(TARGETS nmzIntegrate DESTINATION bin)